# nova3d-plugin

./: .clang-format  .gitignore  CMakeLists.txt  Issues.txt  LICENSE  README.md  build-all.sh  build.sh  build4Win.sh  config.h.in  main.c  map.c  map.h  plugin.json  stringutils.c  stringutils.h
test/input/: run.gcode
test/output/: slice.conf  test.gcode
toolchains/mingw/: toolchain-x86_64-w64-mingw32.cmake
